--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "angular2-quickstart",
   "repository": {
-      "url": "https://github.com/AndreyBespamyatnov/tingcom.git"
+    "url": "https://github.com/AndreyBespamyatnov/tingcom.git"
   },
   "version": "1.0.0",
   "scripts": {
@@ -24,18 +24,20 @@
     "@angular/router": "3.0.0-rc.1",
     "@angular/router-deprecated": "2.0.0-rc.2",
     "@angular/upgrade": "2.0.0-rc.5",
-    "systemjs": "0.19.27",
+    "angular2-in-memory-web-api": "0.0.15",
+    "angular2-modal": "^2.0.0-beta.9",
+    "bootstrap": "^3.3.6",
     "core-js": "^2.4.0",
+    "ng2-bs3-modal": "^0.7.0",
     "reflect-metadata": "^0.1.3",
     "rxjs": "5.0.0-beta.6",
-    "zone.js": "^0.6.12",
-    "angular2-in-memory-web-api": "0.0.15",
-    "bootstrap": "^3.3.6"
+    "systemjs": "0.19.27",
+    "zone.js": "^0.6.12"
   },
   "devDependencies": {
     "concurrently": "^2.0.0",
     "lite-server": "^2.2.0",
     "typescript": "^1.8.10",
-    "typings":"^1.0.4"
+    "typings": "^1.0.4"
   }
 }
